fragment spacing fix

--- a/group/blocks/fragment/fragment.css
+++ b/group/blocks/fragment/fragment.css
@@ -54,6 +54,17 @@
   background-color: #f1eeee;
 }
 
+.fragment-wrapper .rounded-border {
+  align-self: flex-end;
+}
+
+.fragment-wrapper .rounded-border img {
+  border-radius: var(--border-radius-l);
+  max-width: 80%;
+  display: block;
+  margin: 0 auto;
+}
+
 .fragment-wrapper .indent {
   padding: 0 10%;
 }
@@ -93,7 +104,7 @@
     max-width: 50%;
   }
 
-  .fragment-container.two-col > .fragment-wrapper > div h3 {
+  .fragment-container.two-col > .fragment-wrapper > div h5 {
     margin-top: 0;
   }
 
